feat(api): add OutfitItem entity + DTOs + mappers